[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/arial_24.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/tile.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/load_single_tile.gd" type="Script" id=3]
[ext_resource path="res://scenes/menu_button.tscn" type="PackedScene" id=8]

[node name="LoadSingleTile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" parent="." instance=ExtResource( 8 )]
margin_right = 150.0
margin_bottom = 100.0

[node name="Main" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Main/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Load Single Tile"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Main/VBoxContainer"]
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 655.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 623.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 38.0

[node name="Tile" parent="Main/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 38.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="URL" type="LineEdit" parent="Main/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 1156.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "https://raw.githubusercontent.com/ETdoFresh/TileMapCreator/master/sprites/kenney_medievalrtspack/PNG/Retina/Tile/medievalTile_03.png"
placeholder_text = "http://address.to/single/tile.png"

[node name="DownloadButton" type="Button" parent="Main/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 1160.0
margin_right = 1280.0
margin_bottom = 38.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Download"

[node name="AddRowButton" type="Button" parent="Main/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 1200.0
margin_right = 1238.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 0 )
custom_fonts/font = ExtResource( 1 )
text = "+"

[node name="DeleteRowButton" type="Button" parent="Main/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 1242.0
margin_right = 1280.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 0 )
custom_fonts/font = ExtResource( 1 )
text = "-"

[node name="ButtonPanel" type="Panel" parent="Main/VBoxContainer"]
margin_top = 659.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 61 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer/ButtonPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 61 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="Main/VBoxContainer/ButtonPanel/HBoxContainer"]
margin_right = 638.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "OK"

[node name="MenuButton" parent="Main/VBoxContainer/ButtonPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 61.0
size_flags_horizontal = 3

[node name="Cancel" type="Button" parent="Main/VBoxContainer/ButtonPanel/HBoxContainer"]
visible = false
margin_left = 710.0
margin_right = 1280.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Cancel"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
